get request changes
