# src/apiRouter.js
@@ -4,6 +4,10 @@ const callFeedbackCustomer = require('@/routes/callFeedbackCustomer');
 const callFeedbackOperator = require('@/routes/callFeedbackOperator');
 const { getCalls, getCallsValidationArray } = require('@/routes/calls');
 const {
+  getActiveCallSalesRep,
+  getActiveCallSalesRepValidationArray,
+} = require('@/routes/activeCallSalesRep');
+const {
   setupSwagger,
   validateRequest,
   authenticateRequest,
@@ -19,5 +23,10 @@ router
   .get(authenticateRequest())
   .get(validateRequest(getCallsValidationArray()))
   .get(getCalls);
+
+router
+  .route('/active-call-salesrep')
+  .get(validateRequest(getActiveCallSalesRepValidationArray()))
+  .get(getActiveCallSalesRep);
 
 module.exports = router;
